--- a/04 ■► React/final-app/src/components/Footer/index.module.css
+++ b/04 ■► React/final-app/src/components/Footer/index.module.css
@@ -4,6 +4,30 @@
   height: 400px;
   border-top: 1px solid var(--borders-color);
 }
+@media only screen and (max-width: 1199px) {
+  .footer {
+    width: 1199px;
+    height: auto;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .footer {
+    width: 991px;
+    height: auto;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer {
+    width: 767px;
+    height: auto;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .footer {
+    width: 575px;
+    height: auto;
+  }
+}
 .footer__top {
   height: 360px;
   background-color: var(--footer-bg-color);
@@ -14,12 +38,68 @@
   border: none;
   border-bottom: 1px solid var(--borders-color);
 }
+@media only screen and (max-width: 1199px) {
+  .footer__top {
+    width: 1199px;
+    height: auto;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-bottom: 40px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .footer__top {
+    width: 991px;
+    height: auto;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-bottom: 40px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer__top {
+    width: 767px;
+    height: auto;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-bottom: 40px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .footer__top {
+    width: 575px;
+    height: auto;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-bottom: 40px;
+  }
+}
 .footer__top_column {
   width: 250px;
   height: auto;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
+}
+@media only screen and (max-width: 1199px) {
+  .footer__top_column {
+    width: 450px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .footer__top_column {
+    width: 450px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer__top_column {
+    width: 450px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .footer__top_column {
+    width: 450px;
+  }
 }
 .footer__top_column:first-of-type {
   margin-right: 200px;
@@ -31,12 +111,22 @@
   font-size: 20px;
   margin-bottom: 25px;
 }
+@media only screen and (max-width: 1199px) {
+  .footer__top_column__header {
+    font-size: 30px;
+  }
+}
 .footer__top_column__items_static {
   color: var(--text-negative-color);
   font-weight: 500;
   font-size: 16px;
   width: -moz-fit-content;
   width: fit-content;
+}
+@media only screen and (max-width: 1199px) {
+  .footer__top_column__items_static {
+    font-size: 20px;
+  }
 }
 .footer__top_column__items_static:not(:last-of-type) {
   margin-bottom: 10px;
@@ -49,6 +139,11 @@
   transition: var(--quick-fx);
   width: -moz-fit-content;
   width: fit-content;
+}
+@media only screen and (max-width: 1199px) {
+  .footer__top_column__items {
+    font-size: 20px;
+  }
 }
 .footer__top_column__items:not(:last-of-type) {
   margin-bottom: 10px;
@@ -90,10 +185,54 @@
   align-items: center;
   background-color: var(--footer-bottom-color);
 }
+@media only screen and (max-width: 1199px) {
+  .footer__bottom {
+    width: 1199px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .footer__bottom {
+    width: 991px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer__bottom {
+    width: 767px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .footer__bottom {
+    width: 575px;
+  }
+}
 .footer__bottom_text {
   font-weight: 600;
   margin-right: 600px;
   color: var(--text-negative-color);
+}
+@media only screen and (max-width: 1199px) {
+  .footer__bottom_text {
+    width: 100%;
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .footer__bottom_text {
+    width: 100%;
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer__bottom_text {
+    width: 100%;
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .footer__bottom_text {
+    width: 100%;
+    margin: 0px;
+  }
 }
 .footer__bottom_group {
   display: flex;
