--- a/04 ■► React/final-app/src/pages/Settings/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Settings/index.module.scss
@@ -8,6 +8,18 @@
     align-items: flex-start;
     transition: var(--quick-fx);
     padding: 20px 0px 20px 0px; // top right bottom left
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+    };
     &__menu {
         width: 150px;
         height: 500px;
@@ -46,6 +58,18 @@
         padding: 20px 10px 20px 10px; // top right bottom left
         overflow-y: scroll;
         color: var(--text-color);
+        @media only screen and (max-width: 1199px) {
+            width: 1049px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 841px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 617px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 425px;
+        };
         &_section {
             width: 100%;
             height: auto;
@@ -57,6 +81,18 @@
                 letter-spacing: 2px;
                 margin-bottom: 60px;
                 text-transform: uppercase;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 30px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 30px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 30px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 30px;
+                };
             }
             &__headers {
                 font-size: 20px;
