--- a/04 ■► React/final-app/src/pages/About/index.module.scss
+++ b/04 ■► React/final-app/src/pages/About/index.module.scss
@@ -12,8 +12,36 @@
     flex-direction: column;
     padding: 0px 20px 40px 20px; // top right bottom left
     transition: var(--quick-fx);
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+        padding: 0px 20px 40px 20px; // top right bottom left
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+        padding: 0px 20px 40px 20px; // top right bottom left
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+        padding: 0px 20px 40px 20px; // top right bottom left
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+        padding: 0px 20px 40px 20px; // top right bottom left
+    };
     &__container {
         width: 1400px;
+        @media only screen and (max-width: 1199px) {
+            width: 1199px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 991px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 767px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 575px;
+        };
         // border: 1px solid red;
         &_headers {
             font-size: 28px;
@@ -27,6 +55,18 @@
             letter-spacing: 2px;
             margin: 100px 0px 20px 25px; // top right bottom left
             padding-left: 10px;
+            @media only screen and (max-width: 1199px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 991px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 767px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 575px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
         }
         &_text {
             font-size: 20px;
@@ -47,6 +87,22 @@
                 border-radius: 5px;
                 cursor: pointer;
                 border: 1px solid var(--borders-color);
+                @media only screen and (max-width: 1199px) {
+                    width: 300px;
+                    height: 200px;
+                };
+                @media only screen and (max-width: 991px) {
+                    width: 300px;
+                    height: 200px;
+                };
+                @media only screen and (max-width: 767px) {
+                    width: 300px;
+                    height: 200px;
+                };
+                @media only screen and (max-width: 575px) {
+                    width: 180px;
+                    height: 120px;
+                };
                 &:hover {
                     transition: var(--quick-fx);
                     filter: drop-shadow(0 0 5px var(--filter-shadow-color));
@@ -80,6 +136,22 @@
                 left: 0;
                 transform: translate(0%, -50%);
                 transition: var(--quick-fx);
+                @media only screen and (max-width: 1199px) {
+                    width: 171px;
+                    height: 171px;
+                };
+                @media only screen and (max-width: 991px) {
+                    width: 141px;
+                    height: 141px;
+                };
+                @media only screen and (max-width: 767px) {
+                    width: 109px;
+                    height: 109px;
+                };
+                @media only screen and (max-width: 575px) {
+                    width: 81px;
+                    height: 81px;
+                };
                 &_content {
                     width: 100%;
                     height: 100%;
