--- a/04 ■► React/final-app/src/pages/Contact/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Contact/index.module.scss
@@ -12,12 +12,36 @@
     flex-direction: column;
     padding: 0px 20px 40px 20px; // top right bottom left
     transition: var(--quick-fx);
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+    };
     &__container {
         width: 1400px;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        @media only screen and (max-width: 1199px) {
+            width: 1199px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 991px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 767px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 575px;
+        };
         &_headers {
             font-size: 28px;
             font-weight: 600;
@@ -30,6 +54,18 @@
             letter-spacing: 2px;
             margin: 100px 0px 20px 25px; // top right bottom left
             padding-left: 10px;
+            @media only screen and (max-width: 1199px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 991px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 767px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
+            @media only screen and (max-width: 575px) {
+                margin: 100px 0px 20px 0px; // top right bottom left
+            };
         }
         &_text {
             font-size: 20px;
@@ -48,6 +84,22 @@
             padding: 40px; // temporary for note
             display: flex; // temporary for note
             opacity: 0.5; // temporary for note
+            @media only screen and (max-width: 1199px) {
+                width: 640px;
+                height: 360px;
+            };
+            @media only screen and (max-width: 991px) {
+                width: 640px;
+                height: 360px;
+            };
+            @media only screen and (max-width: 767px) {
+                width: 640px;
+                height: 360px;
+            };
+            @media only screen and (max-width: 575px) {
+                width: 480px;
+                height: 270px;
+            };
         }
     }
 }
