--- a/04 ■► React/final-app/src/pages/ItemView/index.module.scss
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.scss
@@ -11,6 +11,10 @@
     align-items: center;
     flex-direction: column;
     padding: 20px 0px 20px 0px;
+    @media only screen and (max-width: 1199px) {};
+    @media only screen and (max-width: 991px) {};
+    @media only screen and (max-width: 767px) {};
+    @media only screen and (max-width: 575px) {};
     &__container {
         width: 1400px;
         height: auto;
