--- a/04 ■► React/final-app/src/pages/Products/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Products/index.module.scss
@@ -12,7 +12,10 @@
     padding: 0px 10px 40px 10px; // top right bottom left
     transition: var(--quick-fx);
     flex-wrap: wrap;
-
+    @media only screen and (max-width: 1199px) {};
+    @media only screen and (max-width: 991px) {};
+    @media only screen and (max-width: 767px) {};
+    @media only screen and (max-width: 575px) {};
     &__topside {
         width: 100%;
         height: auto;
