--- a/04 ■► React/final-app/src/pages/Purchase/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Purchase/index.module.scss
@@ -7,6 +7,10 @@
     justify-content: flex-start;
     align-items: center;
     padding-top: 150px;
+    @media only screen and (max-width: 1199px) {};
+    @media only screen and (max-width: 991px) {};
+    @media only screen and (max-width: 767px) {};
+    @media only screen and (max-width: 575px) {};
     &__status {
         width: 1400px;
         height: 60px;
