--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
@@ -9,6 +9,22 @@
     transition: var(--quick-fx);
     margin-top: 40px;
     position: relative;
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+        overflow: hidden;
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+        overflow: hidden;
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+        overflow: hidden;
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+        overflow: hidden;
+    };
     &__topside {
         width: 1000px;
         height: 100px;
@@ -21,6 +37,18 @@
         padding-right: 70px;
         // background: linear-gradient(to top, var(--default-bg-color), transparent);
         transition: var(--quick-fx);
+        @media only screen and (max-width: 1199px) {
+            width: 400px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 400px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 400px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 400px;
+        };
         &_language {
             width: 120px;
             outline: none;
@@ -31,6 +59,26 @@
             font-size: 14px;
             font-weight: 600;
             transition: var(--quick-fx);
+            @media only screen and (max-width: 1199px) {
+                position: absolute;
+                top: 0px;
+                left: 10px;
+            };
+            @media only screen and (max-width: 991px) {
+                position: absolute;
+                top: 0px;
+                left: 10px;
+            };
+            @media only screen and (max-width: 767px) {
+                position: absolute;
+                top: 0px;
+                left: 10px;
+            };
+            @media only screen and (max-width: 575px) {
+                position: absolute;
+                top: 0px;
+                left: 10px;
+            };
             &__options {
                 background-color: var(--default-bg-color);
             }
@@ -42,6 +90,22 @@
             justify-content: center;
             width: 50%;
             transition: var(--quick-fx);
+            @media only screen and (max-width: 1199px) {
+                width: 1149px;
+                margin-left: 50px;
+            };
+            @media only screen and (max-width: 991px) {
+                width: 941px;
+                margin-left: 50px;
+            };
+            @media only screen and (max-width: 767px) {
+                width: 707px;
+                margin-left: 50px;
+            };
+            @media only screen and (max-width: 575px) {
+                width: 515px;
+                margin-left: 50px;
+            };
             &__login {
                 font-size: 36px;
                 font-weight: 900;
@@ -54,6 +118,18 @@
                 justify-content: center;
                 transition: var(--quick-fx);
                 width: fit-content;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 20px;
+                };
                 &:hover {
                     filter: brightness(2.5);
                 }
@@ -70,6 +146,18 @@
                 justify-content: center;
                 transition: var(--quick-fx);
                 width: fit-content;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 20px;
+                };
                 &:hover {
                     filter: brightness(2.5);
                 }
@@ -88,6 +176,26 @@
             background-color: var(--default-bg-color);
             transition: var(--quick-fx);
             // animation: spinning-button 0.75s ease-in-out 0ms 1; // spinning-button 1.0s ease-in-out 500ms infinite
+            @media only screen and (max-width: 1199px) {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+            };
+            @media only screen and (max-width: 991px) {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+            };
+            @media only screen and (max-width: 767px) {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+            };
+            @media only screen and (max-width: 575px) {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+            };
             &:hover {
                 filter: drop-shadow(0 0 5px var(--filter-shadow-color));
             }
@@ -116,6 +224,10 @@
         scale: 1.0;   //   1.0   0.6
         opacity: 1.0;   //   1.0   0.5
         color: var(--text-color);
+        @media only screen and (max-width: 1199px) {};
+        @media only screen and (max-width: 991px) {};
+        @media only screen and (max-width: 767px) {};
+        @media only screen and (max-width: 575px) {};
         &_overlay {
             z-index: -1; // -1 1
             backdrop-filter: blur(4px);
@@ -208,6 +320,10 @@
         scale: 0.6;   //   0.6   1.0
         opacity: 0.5;   //   0.5   1.0
         color: var(--text-color);
+        @media only screen and (max-width: 1199px) {};
+        @media only screen and (max-width: 991px) {};
+        @media only screen and (max-width: 767px) {};
+        @media only screen and (max-width: 575px) {};
         &_overlay {
             z-index: 1; // 1 -1
             backdrop-filter: blur(4px);
@@ -319,6 +435,10 @@
         justify-content: center;
         gap: 20px;
         // background: linear-gradient(to bottom, var(--default-bg-color), transparent);
+        @media only screen and (max-width: 1199px) {};
+        @media only screen and (max-width: 991px) {};
+        @media only screen and (max-width: 767px) {};
+        @media only screen and (max-width: 575px) {};
         &_buttons {
             width: auto;
             height: auto;
