--- a/04 ■► React/final-app/src/pages/ItemView/index.module.scss
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.scss
@@ -11,15 +11,39 @@
     align-items: center;
     flex-direction: column;
     padding: 20px 0px 20px 0px;
-    @media only screen and (max-width: 1199px) {};
-    @media only screen and (max-width: 991px) {};
-    @media only screen and (max-width: 767px) {};
-    @media only screen and (max-width: 575px) {};
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+        height: auto;
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+        height: auto;
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+        height: auto;
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+        height: auto;
+    };
     &__container {
         width: 1400px;
         height: auto;
         border: 1px solid var(--borders-color);
         display: flex;
+        @media only screen and (max-width: 1199px) {
+            width: 1199px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 991px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 767px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 575px;
+        };
         &_thumbnails {
             display: flex;
             flex-direction: column;
@@ -44,6 +68,22 @@
             border: 1px solid var(--borders-color);
             width: 550px;
             height: 550px;
+            @media only screen and (max-width: 1199px) {
+                width: 450px;
+                height: 450px;
+            };
+            @media only screen and (max-width: 991px) {
+                width: 400px;
+                height: 400px;
+            };
+            @media only screen and (max-width: 767px) {
+                width: 300px;
+                height: 300px;
+            };
+            @media only screen and (max-width: 575px) {
+                width: 275px;
+                height: 275px;
+            };
             &__content {
                 width: 100%;
                 height: 100%;
@@ -57,17 +97,69 @@
             gap: 20px;
             flex-direction: column;
             padding: 10px;
+            @media only screen and (max-width: 1199px) {
+                width: 749px;
+                gap: 20px;
+            };
+            @media only screen and (max-width: 991px) {
+                width: 591px;
+                gap: 20px;
+            };
+            @media only screen and (max-width: 767px) {
+                width: 467px;
+                gap: 15px;
+            };
+            @media only screen and (max-width: 575px) {
+                width: 300px;
+                gap: 5px;
+            };
             &__title {
                 font-size: 28px;
                 font-weight: 600;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 24px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 20px;
+                };
             }
             &__category {
                 font-size: 24px;
                 // opacity: 0.5;
                 font-style: italic;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 20px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 16px;
+                };
             }
             &__description {
                 font-size: 20px;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 18px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 14px;
+                };
             }
             &__rating {
                 display: flex;
@@ -83,10 +175,34 @@
             &__price {
                 font-size: 24px;
                 font-weight: 600;
+                @media only screen and (max-width: 1199px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 28px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 18px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 16px;
+                };
             }
             &__buttons {
                 display: flex;
                 gap: 10px;
+                @media only screen and (max-width: 1199px) {
+                    flex-wrap: wrap;
+                };
+                @media only screen and (max-width: 991px) {
+                    flex-wrap: wrap;
+                };
+                @media only screen and (max-width: 767px) {
+                    flex-wrap: wrap;
+                };
+                @media only screen and (max-width: 575px) {
+                    flex-wrap: wrap;
+                };
                 &_buy {
                     background-color: var(--buttons-color);
                     color: var(--link-color);
@@ -150,6 +266,18 @@
     &__related {
         width: 1400px;
         height: auto;
+        @media only screen and (max-width: 1199px) {
+            width: 1199px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 991px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 767px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 575px;
+        };
         // border: 2px solid var(--borders-color);
         &_header {
             color: var(--text-color);
@@ -164,6 +292,30 @@
             letter-spacing: 2px;
             margin: 20px 0px 20px 25px; // top right bottom left
             padding-left: 10px;
+            @media only screen and (max-width: 1199px) {
+                font-size: 20px;
+                width: 575px;
+                margin: 20px 0px 20px 0px; // top right bottom left
+                padding-left: 10px;
+            };
+            @media only screen and (max-width: 991px) {
+                font-size: 20px;
+                width: 575px;
+                margin: 20px 0px 20px 0px; // top right bottom left
+                padding-left: 10px;
+            };
+            @media only screen and (max-width: 767px) {
+                font-size: 20px;
+                width: 575px;
+                margin: 20px 0px 20px 0px; // top right bottom left
+                padding-left: 10px;
+            };
+            @media only screen and (max-width: 575px) {
+                font-size: 20px;
+                width: 575px;
+                margin: 20px 0px 20px 0px; // top right bottom left
+                padding-left: 10px;
+            };
         }
         &_container {
             width: 100%;
@@ -175,6 +327,22 @@
             justify-content: center;
             align-items: center;
             transition: var(--quick-fx);
+            @media only screen and (max-width: 1199px) {
+                gap: 5px;
+                height: auto;
+            };
+            @media only screen and (max-width: 991px) {
+                gap: 5px;
+                height: auto;
+            };
+            @media only screen and (max-width: 767px) {
+                gap: 5px;
+                height: auto;
+            };
+            @media only screen and (max-width: 575px) {
+                gap: 5px;
+                height: auto;
+            };
             &__alert {
                 font-size: 20px;
             }
@@ -185,12 +353,44 @@
                 border: 1px solid var(--borders-color);
                 border-radius: 4px;
                 overflow: hidden;
+                @media only screen and (max-width: 1199px) {
+                    width: 200px;
+                    height: 220px;
+                };
+                @media only screen and (max-width: 991px) {
+                    width: 200px;
+                    height: 220px;
+                };
+                @media only screen and (max-width: 767px) {
+                    width: 200px;
+                    height: 220px;
+                };
+                @media only screen and (max-width: 575px) {
+                    width: 100px;
+                    height: 110px;
+                };
                 &:hover {
                     scale: 1.02;
                 }
                 &_image {
                     width: 200px;
                     height: 200px;
+                    @media only screen and (max-width: 1199px) {
+                        width: 200px;
+                        height: 220px;
+                    };
+                    @media only screen and (max-width: 991px) {
+                        width: 200px;
+                        height: 220px;
+                    };
+                    @media only screen and (max-width: 767px) {
+                        width: 200px;
+                        height: 220px;
+                    };
+                    @media only screen and (max-width: 575px) {
+                        width: 100px;
+                        height: 90px;
+                    };
                     &__content {
                         width: 100%;
                         height: 100%;
@@ -205,6 +405,18 @@
                     overflow: auto;
                     color: var(--text-color);
                 }
+                @media only screen and (max-width: 1199px) {
+                    font-size: 14px;
+                };
+                @media only screen and (max-width: 991px) {
+                    font-size: 14px;
+                };
+                @media only screen and (max-width: 767px) {
+                    font-size: 14px;
+                };
+                @media only screen and (max-width: 575px) {
+                    font-size: 10px;
+                };
             }
         }
     }
