--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -11,6 +11,26 @@
   transition: var(--quick-fx);
   flex-wrap: wrap;
 }
+@media only screen and (max-width: 1199px) {
+  .products {
+    width: 1199px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products {
+    width: 991px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products {
+    width: 767px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products {
+    width: 575px;
+  }
+}
 .products__topside {
   width: 100%;
   height: auto;
@@ -113,6 +133,46 @@
   transform: translateX(-100%);
   flex-direction: column;
   padding: 40px 0px 0px 0px;
+}
+@media only screen and (max-width: 1199px) {
+  .products .filteraside {
+    background-color: var(--default-bg-color);
+    z-index: 10;
+    margin: 80px;
+    padding: 0px 400px 0px 400px;
+    position: absolute;
+    box-sizing: content-box;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products .filteraside {
+    background-color: var(--default-bg-color);
+    z-index: 10;
+    margin: 80px;
+    padding: 0px 340px 0px 340px;
+    position: absolute;
+    box-sizing: content-box;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products .filteraside {
+    background-color: var(--default-bg-color);
+    z-index: 10;
+    margin: 80px;
+    padding: 0px 225px 0px 225px;
+    position: absolute;
+    box-sizing: content-box;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products .filteraside {
+    background-color: var(--default-bg-color);
+    z-index: 10;
+    margin: 80px;
+    padding: 0px 120px 0px 120px;
+    position: absolute;
+    box-sizing: content-box;
+  }
 }
 .products .filteraside__header {
   font-size: 40px;
@@ -248,6 +308,38 @@
   padding: 20px;
   transition: var(--slow-fx);
 }
+@media only screen and (max-width: 1199px) {
+  .products .container {
+    width: 1199px;
+    margin: 0px 0px 0px 20px;
+    padding: 0px;
+    gap: 20px 28px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products .container {
+    width: 991px;
+    margin: 0px;
+    padding: 0px;
+    gap: 20px 28px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products .container {
+    width: 767px;
+    margin: 0px 0px 0px 120px;
+    padding: 0px;
+    gap: 20px 28px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products .container {
+    width: 575px;
+    margin: 0px;
+    padding: 20px;
+    gap: 20px 28px;
+  }
+}
 .products .container .products__cards {
   border: 1px solid var(--borders-color);
   width: 200px;
@@ -258,6 +350,38 @@
   cursor: pointer;
   transition: var(--quick-fx);
   position: relative;
+}
+@media only screen and (max-width: 1199px) {
+  .products .container .products__cards {
+    width: 550px;
+    height: 200px;
+    display: flex;
+    border: none;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products .container .products__cards {
+    width: 470px;
+    height: 200px;
+    display: flex;
+    border: none;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products .container .products__cards {
+    width: 510px;
+    height: 200px;
+    display: flex;
+    border: none;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products .container .products__cards {
+    width: 510px;
+    height: 200px;
+    display: flex;
+    border: none;
+  }
 }
 .products .container .products__cards:hover {
   filter: drop-shadow(0 0 6px var(--filter-shadow-color));
@@ -274,6 +398,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media only screen and (max-width: 1199px) {
+  .products .container .products__cards_image {
+    border: none;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products .container .products__cards_image {
+    border: none;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products .container .products__cards_image {
+    border: none;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products .container .products__cards_image {
+    border: none;
+  }
 }
 .products .container .products__cards_image__content {
   z-index: 0;
@@ -320,6 +464,26 @@
   flex-direction: column;
   gap: 5px;
   color: var(--header-top-color);
+}
+@media only screen and (max-width: 1199px) {
+  .products .container .products__cards_information {
+    margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .products .container .products__cards_information {
+    margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .products .container .products__cards_information {
+    margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .products .container .products__cards_information {
+    margin-top: 40px;
+  }
 }
 .products .container .products__cards_information__titleandcateg {
   display: flex;
