--- a/04 ■► React/final-app/src/pages/Products/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Products/index.module.scss
@@ -12,10 +12,18 @@
     padding: 0px 10px 40px 10px; // top right bottom left
     transition: var(--quick-fx);
     flex-wrap: wrap;
-    @media only screen and (max-width: 1199px) {};
-    @media only screen and (max-width: 991px) {};
-    @media only screen and (max-width: 767px) {};
-    @media only screen and (max-width: 575px) {};
+    @media only screen and (max-width: 1199px) {
+        width: 1199px;
+    };
+    @media only screen and (max-width: 991px) {
+        width: 991px;
+    };
+    @media only screen and (max-width: 767px) {
+        width: 767px;
+    };
+    @media only screen and (max-width: 575px) {
+        width: 575px;
+    };
     &__topside {
         width: 100%;
         height: auto;
@@ -117,6 +125,38 @@
         transform: translateX(-100%); // -0% -100%
         flex-direction: column;
         padding: 40px 0px 0px 0px; // top right bottom left
+        @media only screen and (max-width: 1199px) {
+            background-color: var(--default-bg-color);
+            z-index: 10;
+            margin: 80px;
+            padding: 0px 400px 0px 400px;
+            position: absolute;
+            box-sizing: content-box;
+        };
+        @media only screen and (max-width: 991px) {
+            background-color: var(--default-bg-color);
+            z-index: 10;
+            margin: 80px;
+            padding: 0px 340px 0px 340px;
+            position: absolute;
+            box-sizing: content-box;
+        };
+        @media only screen and (max-width: 767px) {
+            background-color: var(--default-bg-color);
+            z-index: 10;
+            margin: 80px;
+            padding: 0px 225px 0px 225px;
+            position: absolute;
+            box-sizing: content-box;
+        };
+        @media only screen and (max-width: 575px) {
+            background-color: var(--default-bg-color);
+            z-index: 10;
+            margin: 80px;
+            padding: 0px 120px 0px 120px;
+            position: absolute;
+            box-sizing: content-box;
+        };
         &__header {
             font-size: 40px;
             font-weight: 900;
@@ -248,6 +288,30 @@
         border: none;
         padding: 20px;
         transition: var(--slow-fx);
+        @media only screen and (max-width: 1199px) {
+            width: 1199px;
+            margin: 0px 0px 0px 20px;
+            padding: 0px;
+            gap: 20px 28px;
+        };
+        @media only screen and (max-width: 991px) {
+            width: 991px;
+            margin: 0px;
+            padding: 0px;
+            gap: 20px 28px;
+        };
+        @media only screen and (max-width: 767px) {
+            width: 767px;
+            margin: 0px 0px 0px 120px;
+            padding: 0px;
+            gap: 20px 28px;
+        };
+        @media only screen and (max-width: 575px) {
+            width: 575px;
+            margin: 0px;
+            padding: 20px;
+            gap: 20px 28px;
+        };
         .products__cards {
             border: 1px solid var(--borders-color);
             width: 200px;
@@ -258,6 +322,30 @@
             cursor: pointer;
             transition: var(--quick-fx);
             position: relative;
+            @media only screen and (max-width: 1199px) {
+                width: 550px;
+                height: 200px;
+                display: flex;
+                border: none;
+            };
+            @media only screen and (max-width: 991px) {
+                width: 470px;
+                height: 200px;
+                display: flex;
+                border: none;
+            };
+            @media only screen and (max-width: 767px) {
+                width: 510px;
+                height: 200px;
+                display: flex;
+                border: none;
+            };
+            @media only screen and (max-width: 575px) {
+                width: 510px;
+                height: 200px;
+                display: flex;
+                border: none;
+            };
             &:hover {
                 filter: drop-shadow(0 0 6px var(--filter-shadow-color));
                 scale: 1.03;
@@ -273,6 +361,18 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                @media only screen and (max-width: 1199px) {
+                    border: none;
+                };
+                @media only screen and (max-width: 991px) {
+                    border: none;
+                };
+                @media only screen and (max-width: 767px) {
+                    border: none;
+                };
+                @media only screen and (max-width: 575px) {
+                    border: none;
+                };
                 &__content {
                     z-index: 0;
                     width: 60%;
@@ -318,6 +418,18 @@
                 flex-direction: column;
                 gap: 5px;
                 color: var(--header-top-color);
+                @media only screen and (max-width: 1199px) {
+                    margin-top: 40px;
+                };
+                @media only screen and (max-width: 991px) {
+                    margin-top: 40px;
+                };
+                @media only screen and (max-width: 767px) {
+                    margin-top: 40px;
+                };
+                @media only screen and (max-width: 575px) {
+                    margin-top: 40px;
+                };
                 &__titleandcateg {
                     display: flex;
                     justify-content: center;
